--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
       body{
-        background-color: antiquewhite;
+        background-color: rgb(252, 247, 240);
       }
     </style>
     <title>Погода на React</title>
